--- a/index.css
+++ b/index.css
@@ -5,3 +5,9 @@ input[type="checkbox"] ~ul {
 input[type="checkbox"]:checked ~ul {
   display: block;
 }
+
+#root {
+  margin: 20px;
+  border: 2px solid #333;
+  border-radius: 10px;
+}
