--- a/test.css
+++ b/test.css
@@ -3,10 +3,15 @@
   box-sizing: border-box;
   font-family: 'Do Hyeon', sans-serif;
 }
+
+body {
+  display: flex;
+}
 /* container for test */
 #mocha {
   display: flex;
   flex-direction: column;
+  width: 50vw
 }
 
 #mocha-stats {
@@ -42,6 +47,7 @@
   border-radius: 5px;
   border: 2px solid #333;
   padding: 10px;
+  font-size: 12px;
 }
 
 .suite > h1 > a{
